added stock to controller, test and yml

--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -5,9 +5,11 @@ one:
   price: 1
   image_url: MyString
   description: MyString
+  stock: 4
 
 two:
   name: MyString
   price: 1
   image_url: MyString
   description: MyString
+  stock: 9
