--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -3,13 +3,13 @@
 one:
   name: MyString
   price: 1
-  image_url: MyString
-  description: MyString
+  image_url: MyString.png
+  description: MyStringMyStringMyStringMyStringMyStringMyString
   stock: 4
 
 two:
   name: MyString
   price: 1
-  image_url: MyString
-  description: MyString
+  image_url: MyString.png
+  description: MyStringMyStringMyStringMyString
   stock: 9
